# lief-poc

./: CMakeLists.txt
go/: main.go
lib/: CMakeLists.txt  hello.cc  hello.h
patchee/: CMakeLists.txt  main.cc
src/: api.cc  api.h  call_rewrite.cc  dyn_patch.cc  main.cc
